# nova

./: .env.example  .gitignore  CLAUDE.md  MEMORY_MIGRATION_SUMMARY.md  README.md  create_agent_status.py  docker-compose.test.yml  docker-compose.yml  env.example  nova.code-workspace  pytest.ini  test_mcp_toggle_fix.py
backend/: .dockerignore  Dockerfile  None  README.md  celery_app.py  config.py  env.example  init_db.py  main.py  mcp_client.py  pyproject.toml  pytest.ini  sitecustomize.py  start_core_agent.py  start_website.py  test_db.py
backend/agent/: README.md  chat_agent.py  chat_llm.py  core_agent.py  llm.py  prompts.py  skill_aware_state.py
backend/agent/prompts/: NOVA_SYSTEM_PROMPT.md
backend/api/: admin_endpoints.py  agent.py  api_endpoints.py  api_key_endpoints.py  chat_endpoints.py  config_endpoints.py  hooks_endpoints.py  llm_endpoints.py  mcp_endpoints.py  memory_endpoints.py  prompt_endpoints.py  settings_endpoints.py  skill_endpoints.py  system_endpoints.py  tool_permissions_endpoints.py  websocket_endpoints.py
backend/config/: __init__.py
backend/database/: database.py
backend/email_processing/: fetcher.py  normalizer.py  processor.py  task_creator.py
backend/input_hooks/: __init__.py  base_hook.py  calendar_hook.py  datetime_utils.py  email_hook.py  gmail_hook.py  google_calendar_hook.py  hook_registry.py  models.py  outlook_email_hook.py
backend/input_hooks/calendar_processing/: __init__.py  analyzer.py  fetcher.py  meeting_creator.py  memo_generator.py  processor.py
backend/input_hooks/email_processing/: __init__.py  fetcher.py  interface.py  processor.py  task_creator.py  thread_consolidator.py
backend/input_hooks/outlook_processing/: __init__.py  fetcher.py  interface.py  processor.py
backend/memory/: __init__.py  entity_types.py  graphiti_manager.py  llm_client.py  memory_functions.py
backend/models/: __init__.py  admin.py  chat.py  config.py  email.py  entities.py  events.py  llm.py  mcp.py  memory.py  models.py  skill_models.py  system.py  system_health.py  tasks.py  tool_permissions_config.py  user_profile.py  user_settings.py
backend/services/: __init__.py  api_key_validator.py  chat_metadata_service.py  chat_service.py  conversation_service.py  external_service_status.py  health_monitor.py  llm_service.py
backend/skills/_example_skill/: instructions.md  manifest.yaml  tools.py
backend/skills/add_user_to_coe_gitlab/: config.yaml.example  gitlab_client.py  instructions.md  lam_automation.py  manifest.yaml  test_skill.py  tools.py
backend/skills/genai_training_onboarding/: config.yaml.example  gitlab_client.py  instructions.md  lam_automation.py  manifest.yaml  tools.py
backend/skills/time_tracking/: config.yaml.example  excel_manager.py  instructions.md  manifest.yaml  tools.py
backend/skills/time_tracking/adapters/: base.py
backend/src/: __init__.py
backend/src/nova/: __init__.py  config.py
backend/src/nova/agent/: .gitkeep  __init__.py  agent.py  test_mcp_connection.py
backend/src/nova/api/: .gitkeep
backend/src/nova/core/: .gitkeep
backend/src/nova/orchestrator/: .gitkeep
backend/tasks/: __init__.py  email_processor.py  email_tasks.py  hook_tasks.py
backend/tools/: __init__.py  helpers.py  human_escalation_tool.py  memory_tools.py  person_tools.py  project_tools.py  schemas.py  skill_tools.py  task_tools.py  tool_approval_helper.py
backend/tools/mcp_tools/: __init__.py  project_tools.py  task_tools.py
backend/utils/: __init__.py  base_config_manager.py  browser_automation.py  checkpointer_utils.py  config_events.py  config_loader.py  config_registry.py  docker_detection.py  docker_manager.py  event_handlers.py  langgraph_utils.py  llm_factory.py  logging.py  markdown_config_manager.py  ms_graph_auth_browser.py  phoenix_integration.py  prompt_loader.py  redis_manager.py  service_manager.py  skill_manager.py  task_cache.py  tool_permissions_manager.py  websocket_manager.py  yaml_config_manager.py
configs/: input_hooks.yaml  litellm_config.yaml  mcp_servers.yaml  tool_permissions.yaml  user_profile.yaml.template
database/: init-litellm.sql  init-phoenix.sql
docs/: code_review.md  dead_code_analysis_chat_endpoint.md  docker-setup.md  email-integration-architecture.md  graphiti_integration_architecture_v6.md  high-level-outline.md  settings_realization_work_packages.md  user_context_design.md  user_context_implementation.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
mcp_servers/: README.md
mcp_servers/feature_request/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_integration.py
mcp_servers/feature_request/src/: __init__.py  feature_analyzer.py  linear_client.py  llm_factory.py  mcp_tools.py
mcp_servers/feature_request/tests/: __init__.py  test_feature_analyzer.py  test_linear_client.py  test_mcp_integration.py
mcp_servers/gmail/: Dockerfile  main.py  pyproject.toml
mcp_servers/gmail/tests/: test_main.py
mcp_servers/google-workspace/: .dockerignore  Dockerfile  README.md  calendar_tools.py  credentials.json  main.py  pyproject.toml  token.json
mcp_servers/google-workspace/src/: calendar_tools.py  gmail_tools.py  main.py  service.py
mcp_servers/google-workspace/tests/: test_all_day_events.py  test_calendar.py  test_calendar_conflicts.py  test_gmail.py  test_gmail_tools_email_id.py  test_gmail_tools_param_names.py
mcp_servers/ms_graph/: Dockerfile  README.md  main.py  pyproject.toml
mcp_servers/ms_graph/src/: __init__.py  auth.py  calendar_tools.py  mail_tools.py  people_tools.py  service.py
mcp_servers/ms_graph/tests/: __init__.py  test_auth_error_detection.py
mcp_servers/outlook-mac/: README.md  com.nova.outlook-mcp.plist  main.py  pyproject.toml
mcp_servers/outlook-mac/src/: __init__.py  outlook_service.py
mcp_servers/tasks_md_mcp_server/: Dockerfile  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: README.md
scripts/: README.md  cleanup_chats.py  mcp-docker.sh  (+5 more)
(+283 files in other folders)
