[project]
name = "feature-request-mcp"
version = "0.1.0"
description = "AI-powered feature request management for Linear via MCP"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Nova", email = "nova@example.com"}
]
dependencies = [
    "fastapi>=0.115.13",
    "fastmcp>=0.9.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["src"] 

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
]
