[project]
name = "google-workspace"
version = "0.1.0"
description = "Google Workspace MCP Server - Gmail, Calendar, and productivity tools integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.4",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
