[project]
name = "ms-graph-mcp"
version = "0.1.0"
description = "MS Graph MCP Server - Microsoft 365 Email, Calendar, and People integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.3.4",
    "fastapi>=0.104.0",
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
